# freud_detection

./: .gitignore  DataGenerator.py  KaggleDatasetProvider.py  README.md  df_generator_from_csvs.py  main.py  neural_network.py  preprocessor.py  pyproject.toml  remove_test_data_from_train_data.py  run_catboost.py  run_classification.py  sample.ipynb
.devcontainer/: devcontainer.json
data/: synthetic_data_2024-12-24_15-05-31.csv  synthetic_data_2024-12-24_16-01-20.csv  synthetic_data_2024-12-24_16-06-38.csv  synthetic_data_2024-12-24_16-11-54.csv  synthetic_data_2024-12-24_16-14-26.csv  synthetic_data_2024-12-24_16-17-13.csv  synthetic_data_2024-12-24_16-30-41.csv  synthetic_data_2024-12-24_16-39-50.csv  synthetic_data_2024-12-24_16-42-15.csv  synthetic_data_2024-12-24_16-46-13.csv  synthetic_data_2024-12-30_13-50-31.csv  synthetic_data_2024-12-30_14-35-40.csv  synthetic_data_2024-12-30_14-51-09.csv  synthetic_data_2024-12-30_17-17-33.csv  synthetic_data_2024-12-30_17-22-03.csv  synthetic_data_2024-12-30_17-26-01.csv  synthetic_data_2024-12-30_17-32-04.csv  synthetic_data_2024-12-30_17-35-12.csv  synthetic_data_2024-12-30_17-41-07.csv  synthetic_data_2024-12-30_17-44-01.csv  synthetic_data_2025-01-05_11-21-44.csv  synthetic_data_2025-01-05_11-23-05.csv  synthetic_data_2025-01-05_11-24-59.csv  synthetic_data_2025-01-05_11-27-50.csv  synthetic_data_2025-01-05_11-29-17.csv  synthetic_data_2025-01-05_11-31-52.csv  synthetic_data_2025-01-05_11-33-36.csv  synthetic_data_2025-01-05_11-36-10.csv  synthetic_data_2025-01-05_11-39-09.csv
data_o1/: synthetic_data_2025-01-04_21-15-16.csv  synthetic_data_2025-01-04_21-19-28.csv  synthetic_data_2025-01-04_21-23-19.csv  (+21 more)
dnn/: trainer.py  (+2 more)
(+3 files in other folders)
