[tool.poetry]
name = "freud-detection"
version = "0.1.0"
description = ""
authors = ["Gerber Florian", "Genecand Vincent", "Jungen Björn", "Stevanovski Angelina", "Fischer Moritz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
